--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -67,7 +67,7 @@
 
 
 <div>
-  <%= form_with model: [@book, @book_comment] do |f| %>
+  <%= form_with model:[@book,@book_comment], local: false do |f| %>
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに",class: "w-100" %>
     <br />
     <%= f.submit "送信" %>
