--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -9,7 +9,8 @@
   </thead>
   <tbody>
     <% books.each do |book| %>
-      <tr>
+      <tr id="book_<%= book.id %>">
+
         <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'80x80' %>
           <% end %>
@@ -17,21 +18,9 @@
         <td><%= link_to book.title,book_path(book.id) %></td>
         <td><%= book.body %></td>
 
-        <% if book.favorite_by?(current_user) %>
-    <td>
-      <%= link_to book_favorite_path(book), method: :delete do %>
-        ♥<%= book.favorites.count %> 
-      <% end %>
-    </td>
-    <% else %>
-    <td>
-      <%= link_to book_favorite_path(book), method: :post do %>
-        ♡<%= book.favorites.count %> 
-      <% end %>
-    </td>
-  <% end %>
-
-        <td>コメント件数：<%= book.book_comments.count %></td>
+        
+    <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
+    <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
       </tr>
     <% end %>
     
