bookers2-debug6 favorite2

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
-  		<table class='table'>
+  <table class='table'>
 
       <tr id="book_<%= @book.id %>">
           <td><%= link_to(@book.user) do %>
@@ -22,32 +22,32 @@
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          <% else %>
-            <td />
-            <td />
           <% end %>
 
 
           <td class="favorite-btn"><%= render "favorites/favorite-btn", book: @book %></td>
-  <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
-       </tr></table>
+          <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
+      </tr>
+  </table>
       
 <table>
  
   <% @book.book_comments.each do |book_comment| %>
     <tr>
-    <td><%= link_to(book_comment.user) do %>
+    <td>
+    <%= link_to(book_comment.user) do %>
     <%= image_tag book_comment.user.get_profile_image, size:"80x80" %>
     <br />
-    <%= book_comment.user.name %></td>
+    <%= book_comment.user.name %>
     <% end %>
+    </td>
 
     <td><%= book_comment.comment %></td>
     <% if book_comment.user == current_user %>
-    <td><%= link_to 'Destroy', book_book_comment_path(book_comment.book,book_comment), method: :delete,  data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          <% else %>
-          <td />
-          <% end %>
+    <td>
+    <%= link_to 'Destroy', book_book_comment_path(book_comment.book,book_comment), method: :delete,  data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+    </td>
+    <% end %>
     
     </tr>
   <% end %>
