--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -7,14 +7,15 @@
         
         <td>
           <%= link_to user_path(book_comment.user) do %>
-            <%= image_tag book_comment.user.get_profile_image, size: "100x100" %><br>
+            <%= image_tag book_comment.user.get_profile_image, size: "80x80" %><br>
             <%= book_comment.user.name %>
           <% end %>
         </td>
         <td><%= book_comment.comment %></td>
         <td>
           <% if book_comment.user == current_user %>
-            <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, class: "btn btn-danger pull-right", remote: true %>
+            <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete,
+             class: "btn btn-danger pull-right", remote: true %>
           <% end %>
         </td>
       </tr>
