--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<h2>Book detail</h2>
   <table class='table'>
 
-      <tr id="book_<%= @book.id %>">
+  <tr id="book_<%= @book.id %>">
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
             <%= @book.user.name %>
@@ -19,47 +19,36 @@
           </td>
           <td><%= link_to @book.title, books_path %></td>
           <td><%= @book.body %></td>
+
+          <td class="favorite-btn">
+             <%= render "favorites/favorite-btn", book: @book %>
+           </td>
+          
+          <td class="comment_counter">
+             <%= render "book_comments/counter", book: @book %>
+           </td>
+
+
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          <% end %>
+          <% else %>
+          <td />
+          <td />
+            <% end %>
 
 
-          <td class="favorite-btn"><%= render "favorites/favorite-btn", book: @book %></td>
-          <td class="comments-count">コメント数: <%= @book.book_comments.count %></td>
+          
       </tr>
   </table>
       
-<table>
- 
-  <% @book.book_comments.each do |book_comment| %>
-    <tr>
-    <td>
-    <%= link_to(book_comment.user) do %>
-    <%= image_tag book_comment.user.get_profile_image, size:"80x80" %>
-    <br />
-    <%= book_comment.user.name %>
-    <% end %>
-    </td>
-
-    <td><%= book_comment.comment %></td>
-    <% if book_comment.user == current_user %>
-    <td>
-    <%= link_to 'Destroy', book_book_comment_path(book_comment.book,book_comment), method: :delete,  data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
-    </td>
-    <% end %>
-    
-    </tr>
-  <% end %>
-</table>
+  <div class="comment_index">
+  <%= render "book_comments/index", book: @book %>
+  </div>
 
 
-<div>
-  <%= form_with model:[@book,@book_comment], local: false do |f| %>
-    <%= f.text_area :comment, size:"90x5", placeholder: "コメントをここに" %>
-    <br />
-    <%= f.submit "送信" %>
-  <% end %>
+<div class="book_comment_comment">
+  <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
 </div>
             
       
