--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -3,4 +3,4 @@
 
 $("#book_<%= @book.id %> .comment_counter").html("<%= j(render 'book_comments/counter', book: @book) %>");
 $('.comment_index').html("<%= j(render 'book_comments/index', book: @book) %>");
-$('.book_comment_comment').val("");
+$('#book_comment_comment').val("");
