--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,6 +27,7 @@
           <td class="comment_counter">
              <%= render "book_comments/counter", book: @book %>
            </td>
+           <td>閲覧数: <%= @book.read_counts.count %></td>
 
 
           <% if @book.user == current_user %>
