--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,9 +1,6 @@
 
 
-$('.chats').append(`
-    <div class="chat-fukidashi" style='text-align: right;'>
-      <strong><%= j @message.content %></strong><br>
-      ${'<%= created_at %>'}
-    </div>
-`)
+
+
+$('.chats').append("<p style='text-align: right;'><%= @chat-fukidashi %></p>");
 $('input[type=text]').val("")
