--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,9 @@
 
 
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-6 offset-md-3'>
+
 <div class="container">
   <div class="left-button">
     <%= link_to "ユーザー一覧に戻る", users_path, class:"btn btn-info" %>
@@ -42,3 +46,8 @@
     </div>
   </div>
 </div>
+
+<div class='col-md-3'>
+</div>
+
+</div></div></div>
