--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -20,13 +20,14 @@
 
 
 <div class='row'>
-<% if current_user != user %>
-    <td>
-    <%= render "relationships/btn", user: user %>
-    </td>
-  <% else %>
-  <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if current_user != user %>
+      <td><%= render "relationships/btn", user: user %></td>
+    <% else %>
+      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
   <% end %>
-  <% end %>
+
+   
+  
 </div>
