bookers2-debug-A Finish

--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -2,5 +2,5 @@
 
 
 
-$('.chats').append("<p style='text-align: right;'><%= @chat-fukidashi %></p>");
+$('.message').append('<%= j(render "messages/chat", chat: @chat) %>');
 $('input[type=text]').val("")
