--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -28,6 +28,8 @@
     <% end %>
   <% end %>
 
-   
+  <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+    <%= link_to 'DMを始める', message_path(user.id), class: "btn btn-primary user-show-chat" %>
+  <% end %>
   
 </div>
