bookers2-debug-7b Finish

--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -3,4 +3,4 @@
 
 
 $('.message').append('<%= j(render "messages/chat", chat: @chat) %>');
-$('input[type=text]').val("")
+$('#message_content').val("")
