--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -25,7 +25,7 @@
 </div>
 
 <%= form_with model: @chat, data: {remote: true} do |f| %>
-  <%= f.text_area :content, size:"80x3" %>
+  <%= f.text_area :content, size:"80x3", placeholder: "コメントをここに" %>
   <%= f.submit "送信", class: "btn btn-dark btn-sm" %>
   <%= f.hidden_field :room_id %>
 <% end %>
