--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,67 @@
       <%= render 'books/index',books: @books %>
 
 
+      <h2>投稿数の前日比・先週比</h2>
+      <table class="table">
+        <tr>
+          <th>今日の投稿数</th>
+          <th>前日の投稿数</th>
+          <th>前日比</th>
+        </tr>
+        <tr>
+          <td><%= @today_book.count %></td>
+          <td><%= @yesterday_book.count %></td>
+          <% if @yesterday_book.count == 0 %>
+            <td>前日の投稿はなし</td>
+          <% else %>
+            <td>
+              <% @the_day_before =  @today_book.count / @yesterday_book.count  %>
+              <%= (@the_day_before * 100).round %>
+            </td>
+          <% end %>
+        </tr>
+      </table>
+
+      <table class="table">
+        <tr>
+          <th>今週の投稿数</th>
+          <th>前週の投稿数</th>
+          <th>前週比</th>
+        </tr>
+        <tr>
+          <td><%= @this_week_book.count %></td>
+          <td><%= @last_week_book.count %></td>
+          <% if @last_week_book.count == 0 %>
+            <td>前週の投稿はなし</td>
+          <% else %>
+              <% @the_week_before =  @this_week_book.count / @last_week_book.count  %>
+              <%= (@the_week_before * 100).round %>
+          <% end %>
+        </tr>
+      </table>
+
+      <h2>7日分の投稿数</h2>
+    <table class="table table-bordered ">
+      <tr>
+        <th>6日前</th>
+        <th>5日前</th>
+        <th>4日前</th>
+        <th>3日前</th>
+        <th>2日前</th>
+        <th>1日前</th>
+        <th>今日</th>
+      </tr>
+      <tr>
+        <td><%= @books.created_today.count %></td>
+        <td><%= @books.created_yesterday.count %></td>
+        <td><%= @books.created_2day_ago.count %></td>
+        <td><%= @books.created_3day_ago.count %></td>
+        <td><%= @books.created_4day_ago.count %></td>
+        <td><%= @books.created_5day_ago.count %></td>
+        <td><%= @books.created_6day_ago.count %></td>
+      </tr>
+    </table>
+
     </div>
   </div>
 </div>
