--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -13,7 +13,10 @@
         <td><%= user.name %></td>
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
+        <% unless user.guest_user? %>
+        <% else %>
         <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
+        <% end %>
         <td><%= link_to 'Show', user_path(user.id) %></td>
       </tr>
     <% end %>
