--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,15 @@
               <i class="fas fa-home"></i> Home
             <% end %>
           </li>
+
+          
+          <li>
+            <%= link_to events_index_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-table"></i> Calendar
+            <% end %>
+          </li>
+
+
           <li>
             <%=  link_to users_path,class: 'nav-link text-light' do %>
               <i class="fas fa-users"></i> Users
@@ -24,7 +33,7 @@
             <% end %>
           </li>
 
-          
+
           <li class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Notification
