--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,11 @@
               <i class="fas fa-table"></i> Calendar
             <% end %>
           </li>
+          <li>
+            <%= link_to map_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-map"></i> Map
+            <% end %>
+          </li>
 
 
           <li>
