--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -3,8 +3,9 @@
 <table class="table">
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Members</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +13,8 @@
     <% groups.each do |group| %>
     <tr>
       <td><%= image_tag group.get_group_image, size: "80x80" %></td>
-      <td><%= group.name %></td>
-        <td><%= link_to 'Show', group, class: "group_#{group.id}" %></td>
+      <td><%= link_to group.name, group, class: "group_#{group.id}" %></td>
+      <td><%= group.group_users.count %></td>
         <% if group.is_owned_by?(current_user) %>
           <td><%= link_to 'Edit', edit_group_path(group), class: "btn btn-success group_#{group.id}" %></td>
         <% end %>
