--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -22,6 +22,7 @@
     <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
     <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
     <td class="reads-count">閲覧数: <%= book.read_counts.count %></td>
+    <td><%= render "books/static_rate", book: book %></td>
     </tr>
 
     <% end %>
