--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,9 +26,10 @@
           
           <td class="comment_counter">
              <%= render "book_comments/counter", book: @book %>
-           </td>
-           <td>閲覧数: <%= @book.read_counts.count %></td>
+          </td>
+          <td>閲覧数: <%= @book.read_counts.count %></td>
 
+          <td><%= render "static_rate", book: @book %></td>
 
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
