--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,6 +8,12 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
 
+  
+  <div class="form-group">
+  <%= f.label :Category %>
+  <%= f.text_field :category, class: "form-control book_category" %>
+  </div>
+
 
   <% if book.id.nil? %>
     <div class="form-group" id="star">
@@ -15,6 +21,7 @@
       <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
       <div id="post_raty"></div>
     </div>
+    
     <script>
       $(document).on('turbolinks:load', function() {
         let elem = document.querySelector('#post_raty');
