--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tag</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,12 +19,18 @@
         <td><%= link_to book.title,book_path(book.id) %></td>
         <td><%= book.body %></td>
 
+        <td>
+            <% if book.category.present? %>
+              <%= link_to book.category, tag_searches_search_path(content: book.category) %>
+            <% end %>
+        </td>
+
     
-    <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
-    <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
-    <td class="reads-count">閲覧数: <%= book.read_counts.count %></td>
-    <td><%= render "books/static_rate", book: book %></td>
-    </tr>
+        <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
+        <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
+        <td class="reads-count">閲覧数: <%= book.read_counts.count %></td>
+        <td><%= render "books/static_rate", book: book %></td>
+      </tr>
 
     <% end %>
     
