--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,6 +20,12 @@
           <td><%= link_to @book.title, books_path %></td>
           <td><%= @book.body %></td>
 
+          <td>
+            <% if @book.category.present? %>
+              <%= link_to @book.category, tag_searches_search_path(content: @book.category) %>
+            <% end %>
+          </td>
+          
           <td class="favorite-btn">
              <%= render "favorites/favorite-btn", book: @book %>
            </td>
